<resources>
    <string name="app_name">CredCAR</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_sair">Sair</string>
    <string name="menu_arquivado">Arquivado</string>
    <string name="menu_configuracao">Configuração</string>
    <string name="menu_limpar_historico">Limpar Histórico</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_compartilhar">Compartilhar</string>

    <string name="menu_novo_passageiro">Novo passageiro</string>


    <string name="texto_compartilhar">Acesse a Google Play e baixe o aplicativo CredCAR
        e registre os valores de viagens pendentes.
    </string>
    <string name="descricao_sobre">
        Este app foi desenvolvido como projeto final da disciplina Programação para
        Dispositivos Moveis, ministrada pelo professor Alexandre Kurtição.
    </string>
    <string name="texto_ok">Ok</string>
    <string name="title_activity_teste2">Teste2Activity</string>



</resources>
